Got the site ready for local deployment
Had an issue with the packages because  I installed npm with my VPN active. Issues were fixed by deleting and reinstalling package-lock and node_modules

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@astrojs/sitemap": "3.2.1",
     "@astrojs/tailwind": "5.1.4",
     "@shikijs/transformers": "^1.25.1",
-    "astro": "5.1.2",
+    "astro": "^5.1.2",
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
     "astro-webmanifest": "^1.0.0",
@@ -36,6 +36,7 @@
     "satori": "0.12.0",
     "satori-html": "^0.3.2",
     "sharp": "^0.33.5",
+    "tslib": "^2.8.1",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
@@ -60,6 +61,10 @@
     "typescript": "^5.7.2"
   },
   "pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "sharp"]
-	}
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild",
+      "sharp"
+    ]
+  }
 }
